--- a/T1DProject.ipynb
+++ b/T1DProject.ipynb
@@ -652,7 +652,6 @@
    "cell_type": "markdown",
    "id": "0fcfb6e2-e7c1-4c8b-8273-efb213fdb67a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -777,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 191,
    "id": "f18c4cd9-9aac-4080-ba74-6549ec46c7da",
    "metadata": {},
    "outputs": [
@@ -1618,6 +1617,7 @@
    "cell_type": "markdown",
    "id": "c32691c5-d836-4e73-9539-1b000bc0a318",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2334,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 192,
    "id": "36d6892a-150d-4fa9-af0b-5f7f8aa28fd7",
    "metadata": {},
    "outputs": [
@@ -2367,13 +2367,13 @@
     "\n",
     "true_values = filtdf['value']\n",
     "\n",
-    "# Hovorka model parameters\n",
+    "# Hovorka model parameters from bayesian estimation\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726  \n",
     "\n",
     "G_init = 105  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -2465,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 193,
    "id": "9fd59c6b-3b52-4542-bad7-0d6e7d2c6531",
    "metadata": {},
    "outputs": [
@@ -2500,11 +2500,11 @@
     "\n",
     "# Hovorka model parameters\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726   \n",
     "\n",
     "G_init = 105  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -2606,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 194,
    "id": "1691daf2-ca39-4c00-a4fc-ce52abafe5a2",
    "metadata": {},
    "outputs": [
@@ -2641,11 +2641,11 @@
     "\n",
     "# Hovorka model parameters\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726    \n",
     "\n",
     "G_init = 170  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -2737,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 195,
    "id": "ef299737-06b8-4eef-bfa1-7273857ecf2b",
    "metadata": {},
    "outputs": [
@@ -2772,11 +2772,11 @@
     "\n",
     "# Hovorka model parameters\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726    \n",
     "\n",
     "G_init = 170  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -2879,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 196,
    "id": "601eac51-8f90-4263-9d95-890a7c1eed86",
    "metadata": {},
    "outputs": [
@@ -2914,11 +2914,11 @@
     "\n",
     "# Hovorka model parameters\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726   \n",
     "\n",
     "G_init = 260  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 197,
    "id": "d27235c9-2ea6-4c7c-b619-bb3158724b7f",
    "metadata": {},
    "outputs": [
@@ -3044,11 +3044,11 @@
     "\n",
     "# Hovorka model parameters\n",
     "V_G = 0.16\n",
-    "k_1 = 0.05\n",
-    "k_2 = 0.05\n",
-    "k_3 = 0.05\n",
-    "k_4 = 0.05\n",
-    "k_e = 0.1   \n",
+    "k_1 = 0.03989\n",
+    "k_2 = 0.04809\n",
+    "k_3 = 0.04452\n",
+    "k_4 = 0.05192\n",
+    "k_e = 0.10726  \n",
     "\n",
     "G_init = 260  # Initial glucose concentration (mg/dL)\n",
     "I_init = 5    # Initial insulin concentration (mU/L)\n",
@@ -3136,6 +3136,14 @@
     "r_squared = r2_score(true_values, predicted_glucose)\n",
     "print(\"R-squared (R^2):\", r_squared)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b63f91c-1438-4082-8264-20b67657e038",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
