--- a/T1DProject.ipynb
+++ b/T1DProject.ipynb
@@ -715,7 +715,7 @@
     "    return [dGdt, dXdt]\n",
     "\n",
     "G0 = 105.0  # Initial glucose concentration (mg/dL)\n",
-    "X0 = 5   # Initial insulin action (unknown)\n",
+    "X0 = 5   # Initial insulin action\n",
     "\n",
     "# Parameters\n",
     "P = 2.0     # Glucose input rate (mg/dL/min)\n",
@@ -2315,6 +2315,7 @@
    "cell_type": "markdown",
    "id": "e52beea5-56e8-4a7d-a535-c8589df36834",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3136,14 +3137,6 @@
     "r_squared = r2_score(true_values, predicted_glucose)\n",
     "print(\"R-squared (R^2):\", r_squared)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b63f91c-1438-4082-8264-20b67657e038",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
